<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".activity.RegisterVaccineActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/registerVaccineDose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/registerVaccineDose1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/registerVaccineDose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:text="@string/registerVaccineDose2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/registerVaccineDose3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerVaccineDose3"
            android:textSize="16sp" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Tipo">

        <AutoCompleteTextView
            android:id="@+id/registerVaccineType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/registerVaccineType" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerVaccineDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerVaccineDate"
            android:inputType="date"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerVaccineSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="60dp"
        android:onClick="saveVaccine"
        android:text="@string/registerVaccineSave"
        android:textAllCaps="true"
        android:textSize="16sp" />

</LinearLayout>