<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/openSymptonScreen"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openSymptonScreen"
                android:text="@string/openSymptonScreen"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/ic_coronavirus"
                app:iconGravity="textTop"
                app:iconPadding="15dp"
                app:iconSize="40dp"
                app:strokeColor="@color/design_default_color_primary"
                app:strokeWidth="1dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/openVaccineScreen"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openVaccineScreen"
                android:text="@string/openVaccineScreen"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:strokeColor="@color/design_default_color_primary"
                app:strokeWidth="1dp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/openHistoryScreen"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openHistoryScreen"
                android:text="@string/openHistoryScreen"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/ic_history"
                app:iconGravity="textTop"
                app:iconPadding="15dp"
                app:iconSize="40dp"
                app:strokeColor="@color/design_default_color_primary"
                app:strokeWidth="1dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="0dp">

            <Button
                android:id="@+id/openPreferencesScreen"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="openPreferenceScreen"
                android:text="@string/openPreferencesScreen"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:icon="@drawable/ic_settings"
                app:iconGravity="textTop"
                app:iconPadding="15dp"
                app:iconSize="40dp"
                app:strokeColor="@color/design_default_color_primary"
                app:strokeWidth="1dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>